test: downgrade test suite syntax for Java 8 CI compatibility
- Replaced Java 10 'var' keyword with explicit type declarations.
- Converted Java 15 Text Blocks (""") to standard string concatenation.
- Replaced Java 16 'record' classes with traditional POJOs.
- Swapped Java 9 'List.of()' with 'Arrays.asList()'.
- Ensured all test sources compile and execute flawlessly on the JDK 8 runner of the new GitHub Actions build matrix.